# lore

./: .gitignore  LICENSE  README.md  TODO.md  backup-wiki.sh  build.sbt  calculation.lore  example-struct-transpilation.js  hello-name.js  index-dev.html  lore-functions.md  lore.js  performance.md  test.sh  wc.sh
articles/: expressions.md  functional-constructors.md  functional-reactive-programming.md  typed-components.md  types.md
lsp/: README.md  (+1 more)
vm/: .gitignore  Cargo.toml  README.md  TODO.md  poem.md  run.sh  test.sh
vm/benches/: my_benchmark.rs
vm/bytecode/: fib.poem  hello-name.poem
vm/cli/: main.rs
vm/examples/: fib.poem  hello-name.poem
vm/src/: bytecode.nim  definitions.nim  dispatch.nim  evaluator.nim  evaluator.rs  fib_native.nim  functions.nim  imseqs.nim  instruction.rs  instructions.nim  lib.rs  poem.nim  poems.nim  property_index.nim  pyramid.nim  schema_order.nim  specs.nim  stackseqs.nim  time.nim  tpe.rs  types.nim  types.rs  universes.nim  utils.nim  value.rs  values.nim  vm.nim
vm/src/examples/: add_five.nim  add_tuples.nim  cli.nim  common.nim  empty.nim  fib.nim  fib_primitive.nim  hello_name.nim  lambdas.nim  list_appends.nim  list_concat.nim  list_get.nim  list_print_each.nim  multi_function_values.nim  nine.nim  schema_options.nim  shape_constant.nim  shape_positions.nim  stats.nim  tau.nim  write_all.nim
vm/test/meta_shapes/: interning.nim
vm/test/property_index/: interned_unique.nim  prefixes.nim  single_name.nim
vm/test/schema_order/: option.nim
vm/test/stackseqs/: init_grow_sum.nim
vm/test/types/: simplification.nim
(+1721 files in other folders)
