[package]
name = "lore_vm"
version = "0.0.1"
authors = [ "Marco Pennekamp <marcopennekamp.com>" ]

[lib]
name = "lore"
path = "src/lib.rs"

[[bin]]
name = "lore_vm_cli"
path = "cli/main.rs"

[dependencies]
smallvec = "1.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
